<resources>
    <string name="app_name">Commute</string>
    <string name="hi">hi</string>
    <string name="lets_get_started">lets_get_started</string>
    <string name="hint_phone_number" translatable="false">hint_phone_number</string>
    <string name="wait_for_auto_verify">wait_for_auto_verify</string>
    <string name="enter_6_digit_code">enter_6_digit_code</string>
    <string name="didn_t_receive_the_code">didn_t_receive_the_code</string>
    <string name="resend_code">resend_code</string>
    <string name="title_activity_commute">Commute Detailes</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="nav_header_title">COMMUTE</string>
    <string name="nav_header_subtitle">www.commuteme.com</string>
    <string name="nav_header_desc">commute app</string>
    <string name="action_settings">Settings</string>
    <string name="fill">fill</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="order_commute">order commute</string>
    <string name="seets_number">seets number</string>
    <string name="what_place_from">What place that you want go on</string>
    <string name="what_place_to">What place that you want come from</string>
    <string-array name="tracker_point">
        <item>alazhry</item>
        <item>almamora</item>
        <item>arkaweet</item>
        <item>alamarat</item>
        <item>afraa</item>
        <item>alsahafa</item>
    </string-array>
    <string-array name ="hour_from">
        <item >7</item>
        <item >7:30</item>
        <item >8</item>
        <item >8:30</item>
    </string-array>
    <string-array name ="hour_to">
        <item >3</item>
        <item >3:30</item>
        <item >4</item>
        <item >4:30</item>
    </string-array>
    <string-array name ="seet_number">
        <item >1seet</item>
        <item >2seets</item>
        <item >3-5seets</item>
        <item >5-7seets</item>
        <item >7-10seets</item>
    </string-array>
</resources>
