<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_commute"
    tools:context=".CommuteActivity">

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/disfrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/what_place_from" />

            <AutoCompleteTextView
                android:id="@+id/distnationfrom"
                android:layout_width="@dimen/dp_280"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="8"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:gravity="center_horizontal"
            android:text="@string/what_place_to" />

        <AutoCompleteTextView
            android:id="@+id/distnationto"
            android:layout_width="@dimen/dp_280"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="8"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            tools:ignore="Autofill,LabelFor,TextFields" />    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/from" />

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            tools:ignore="Autofill,LabelFor,TextFields" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/to" />

            <Spinner
                android:id="@+id/spinner_to"
                android:layout_width="@dimen/dp_100"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/seets_number"/>
                <Spinner
                    android:id="@+id/spinner_num"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    tools:ignore="Autofill,LabelFor,TextFields" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="400dp">
           <Button
               android:id="@+id/save"
               android:layout_width="200dp"
               android:layout_height="wrap_content"
               android:text="@string/order_commute"
               android:layout_gravity="center_horizontal"
               android:shadowRadius="@android:integer/config_longAnimTime"/>

        </LinearLayout>
    </android.support.design.card.MaterialCardView>

</RelativeLayout>